kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-service
  name: hello-service
spec:
  selector:
    matchLabels:
      app: hello-service
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - hello-service
                topologyKey: kubernetes.io/hostname
      containers:
        - name: hello
          image: image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /manage/health/liveness
              port: 8081
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /manage/health/readiness
              port: 8081
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 10
          resources:
            limits:
              cpu: 700m
              memory: 512Mi
            requests:
              cpu: 400m
              memory: 256Mi
          volumeMounts:
            - name: secrets-volume
              mountPath: /app/secrets
              readOnly: true
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: secrets-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hello-service-secret-aws-provider
        - name: config-volume
          configMap:
            name: hello-service-configuration
      serviceAccountName: hello-service-sa
